=====================
Django MPTT CHANGELOG
=====================

Thu 3rd Jan, 2008
-----------------

* Implemented the ``position`` argument for
  ``TreeManager.move_to_new_tree``.

* Implemented a ``position`` argument for
  ``TreeManager.move_within_tree``. The node being moved can now be made
  a sibling, first child or last child  of the target node.

* Added a ``move_node`` method to ``TreeManager``, to take care of
  automatically calling the appropriate node movement manager method.

* Combined a number of SQL queries into single queries using ``CASE``
  operators to reduce the overall number of queries required to move
  tree nodes around.

Wed 2nd Jan, 2008
-----------------

* Fixed a bug in ``TreeManager.move_within_tree`` when no level change
  is required.

* Fixed a bug in ``TreeManager.move_within_tree`` - it now takes into
  account whether or not the new parent's right value is greater than
  that of the node which is being moved.

* Added tests for manually moving nodes using the ``TreeManager``
  methods.

* Extracted logic for moving a ``Model`` instance to a different parent
  within its current tree from ``mptt.signals.pre_save`` into the
  ``move_within_tree`` method in ``TreeManager``.

* Extracted logic for moving a ``Model`` instance from one tree to
  another from ``mptt.signals.pre_save`` into the ``move_to_new_tree``
  method in ``TreeManager``.

* Extracted some similar move-node-to-tree queries in ``TreeManager``'s
  ``make_child_node`` and ``make_root_node`` methods out into a new
  ``_inter_tree_move`` method.

Tue 1st Jan, 2008
-----------------

* Extracted logic for turning a ``Model`` instance which is the root
  node of a tree into a child of a given parent node in another tree from
  ``mptt.signals.pre_save`` into the ``make_child_node`` method in
  ``TreeManager``.

* Extracted logic for turning a ``Model`` instance which is a child node
  into the root node of a new tree from ``mptt.signals.pre_save`` into